<resources>
    <string name="app_name">Mesa News</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_news">NewsActivity</string>
    <string name="error_text">An error occurred while loading data.</string>
    <string name="no_favorite_message">You don\'t have favorite news yet.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_field_name">Name</string>
    <string name="sign_up_field_email">E-mail</string>
    <string name="sign_up_field_password">Password</string>
    <string name="sign_up_field_password_confirmation">Password Confirmation</string>
    <string name="invalid_input_error">Invalid Input</string>
</resources>